feature: connect to relational database
