# db/handler.js
@@ -1,0 +1,4 @@
+const { employees, updateEmployee } = require('./src/endpoints/employees/handlers')
+const { payslips, createPayslip } = require('./src/endpoints/payslips/handlers')
+
+module.exports = { employees, updateEmployee, payslips, createPayslip }
